kubernetes/blue-green/blue-green-demo-route.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: blue-green-demo # The name of our route; appears in the URL to access the app
  namespace: default # The namespace we're working in; also appears in the URL to access the app
spec:
  traffic:
    # - revisionName: blue-green-demo-00001
    #   percent: 100 # All traffic goes to this revision
    
    # - revisionName: blue-green-demo-00001
    #   percent: 100 # All traffic goes to this revision
    # - revisionName: blue-green-demo-00002
    #   percent: 0 # All traffic goes to this revision
    #   name: v2

    # - revisionName: blue-green-demo-00001
    #   percent: 50 # All traffic goes to this revision
    # - revisionName: blue-green-demo-00002
    #   percent: 50 # All traffic goes to this revision
    #   name: v2

    - revisionName: blue-green-demo-00001
      percent: 0 # All traffic goes to this revision
      name: v1
    - revisionName: blue-green-demo-00002
      percent: 100 # All traffic goes to this revision
